--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ div * {
 
 textarea {
     justify-content: center;
-        align-content: center;
-        align-items: center;
-        text-align: center;
+    align-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 body {
@@ -17,25 +17,20 @@ body {
     display: flex;
 }
 
-body * {
+body * :not(script) {
     display: flex;
 }
 
 svg {
     flex: 0 0 auto;
     padding: 0;
+    align-self: center;
 }
 
 div {
     flex: 1 1 auto;
-    background-color: transparent; 
+    background-color: transparent;
     padding: 0;
     display: grid;
     grid: auto / auto auto auto auto;
-}
-
-#input {
-    background-color: hsl(240, 10%, 10%);
-    padding: 1rem;
-    margin: 1rem;
 }
