--- a/style.css
+++ b/style.css
@@ -1,36 +1,21 @@
-div * {
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    text-align: center;
-}
-
 textarea {
     justify-content: center;
     align-content: center;
     align-items: center;
     text-align: center;
+
 }
 
 body {
-    flex-flow: row nowrap;
-    display: flex;
-}
-
-body * :not(script) {
-    display: flex;
+    grid: auto / auto auto auto;
+    width: 100%;
+    height: 100%;
 }
 
 svg {
-    flex: 0 0 auto;
+    display: flex;
+    flex: 1 1 auto;
     padding: 0;
     align-self: center;
-}
-
-div {
-    flex: 1 1 auto;
-    background-color: transparent;
-    padding: 0;
-    display: grid;
-    grid: auto / auto auto auto auto;
+    width: 100%;
 }
