--- a/style.css
+++ b/style.css
@@ -1,29 +1,11 @@
-textarea, svg, input, button {
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    text-align: center;
-    width: calc(100% - 2rem);
-    
-}
-
-html {
-    width: 100%;
-    height: 100%;
-}
-
 body {
-    grid: auto / 1fr 1fr 1fr;
-    width: 100%;
-    height: 100%;
+    grid: auto / 1fr 1fr;
 }
 
-textarea, input, button {
-    color: light-dark(var(--dark-2), var(--light-2)) !important;
-    background-color: light-dark(var(--light-2), var(--dark-2)) !important;
+textarea {
+    resize: none;
 }
 
-svg {
-    aspect-ratio: 1 / 1 !important;
+canvas {
     padding: 0;
 }
