--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ textarea {
 
 @media (orientation: portrait) {
     body {
-        grid: auto / auto;
+        grid: auto / 1fr 1fr;
     }
 }
 
@@ -25,8 +25,9 @@ canvas {
     grid: auto / 1fr 1fr;
 }
 
-label {
+label, input {
+    display: flex;
     justify-content: center;
     align-items: center;
-    align-content: center;
+    text-align: center;
 }
